refactor: replace RuntimeException with IOException for better error handling